careerpath-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: careerpath
  namespace: saleproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: careerpath
  template:
    metadata:
      labels:
        app: careerpath
    spec:
      containers:
      - name: careerpath
        image: rajiv8982/saleproject-careerpath:v1
        ports:
        - containerPort: 3003
