careerpath-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: careerpath
  namespace: saleproject
spec:
  selector:
    app: careerpath
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
