frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: saleproject
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
