mongodb-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  namespace: saleproject
spec:
  selector:
    app: mongodb-exporter
  ports:
    - port: 9216
      targetPort: 9216
  type: ClusterIP
